trying to fix scroll on mobile

--- a/css/post.scss
+++ b/css/post.scss
@@ -173,11 +173,7 @@ header {
 }
 
 @media (max-width: 550px) {
-    header {
-        .post-title {
-            font-size: 24px;
-        }
-        
+    header {  
         .post-meta {
             .metadata {
                 padding: 0 2px 0 4px;
